Switching to Java 11 base version.