@@ -9,8 +9,7 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
+        <maven.compiler.release>11</maven.compiler.release>
         <log4j>2.17.2</log4j>
         <antlr>4.10.1</antlr>
         <jackson>2.13.2</jackson>
@@ -381,10 +380,10 @@
                     <version>3.3.2</version>
                     <configuration>
                         <quiet />
-                        <bootclasspath>${bootclasspath}</bootclasspath>
-                        <source>${maven.compiler.source}</source>
+                        <source>${maven.compiler.release}</source>
                         <detectJavaApiLink>true</detectJavaApiLink>
                         <detectLinks>false</detectLinks>
+                        <additionalJOption>--add-modules=java.management</additionalJOption>
                         <links>
                             <link>https://www.javadoc.io/doc/javax.cache/cache-api/${cacheapi.version}/</link>
                             <link>https://www.javadoc.io/doc/org.snmp4j/snmp4j/${snmp4j.version}/</link>
@@ -727,13 +726,8 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <compilerArgs>
-                        <arg>-Xbootclasspath/p:${bootclasspath}</arg>
-                    </compilerArgs>
-                    <showWarnings>false</showWarnings>
+                    <showWarnings>true</showWarnings>
                     <!-- needed for maven-plugin-javadoc to find the source version to use -->
-                    <source>${maven.compiler.source}</source>
-                    <target>${maven.compiler.target}</target>
                 </configuration>
             </plugin>
             <plugin>
@@ -858,15 +852,6 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <id>attach-javadocs</id>
-                        <!-- Attach javadocs compressed to a jar file. -->
-                        <goals>
-                            <goal>jar</goal>
-                        </goals>
-                    </execution>
-                </executions>
             </plugin>
         </plugins>
     </build>
@@ -932,65 +917,6 @@
                     </plugin>
                 </plugins>
             </reporting>
-        </profile>
-        <profile>
-            <!-- With this profile, it's possible to used the latest jvm but 
-                still get jar compatible with pre-9 JVM. It's activated when jdk.compile.home 
-                is defined. Example: JAVA_HOME=$JAVA14_HOME mvn compile -Djdk.compile.home=$JAVA8_HOME 
-                ! -->
-            <id>crosscompile</id>
-            <activation>
-                <property>
-                    <name>jdk.compile.home</name>
-                </property>
-            </activation>
-            <properties>
-                <bootclasspath>${jdk.compile.home}/jre/lib/rt.jar:${jdk.compile.home}/jre/lib/jce.jar</bootclasspath>
-            </properties>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-compiler-plugin</artifactId>
-                        <configuration>
-                            <compilerArgs>
-                                <arg>-Xbootclasspath:${bootclasspath}</arg>
-                                <arg>-Xlint:deprecation</arg>
-                            </compilerArgs>
-                            <!-- needed for maven-plugin-javadoc to find the 
-                                source version to use -->
-                            <source>${maven.compiler.source}</source>
-                            <target>${maven.compiler.target}</target>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-        <profile>
-            <!-- The default compile settings, when jdk.compile.home is not defined -->
-            <id>nocrosscompile</id>
-            <activation>
-                <property>
-                    <name>!jdk.compile.home</name>
-                </property>
-            </activation>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-compiler-plugin</artifactId>
-                        <configuration>
-                            <compilerArgs>
-                                <arg>-Xlint:deprecation</arg>
-                            </compilerArgs>
-                            <!-- needed for maven-plugin-javadoc to find the 
-                                source version to use -->
-                            <source>${maven.compiler.source}</source>
-                            <target>${maven.compiler.target}</target>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
         </profile>
     </profiles>
 
